--- a/config-server.properties
+++ b/config-server.properties
@@ -1,1 +1,11 @@
 server.port=9999
+spring.sql.init.platform=h2
+spring.sql.init.mode=always
+spring.datasource.url=jdbc:h2:mem:test
+spring.jooq.sql-dialect=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+logging.file.name=server-log.txt
+management.endpoint.health.show-details=always
+management.endpoint.sessions.enabled=true
