--- a/config-gateway.properties
+++ b/config-gateway.properties
@@ -4,4 +4,4 @@ spring.cloud.gateway.routes[0].uri=http://localhost:9999
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/hospitals/**
 spring.cloud.gatewar.routes[1].id=client
 spring.cloud.gateway.routes[1].uri=http://localhost:10000
-spring.cloud.gateway.routes[1].predicates[0]=Path=/client/**
+spring.cloud.gateway.routes[1].predicates[0]=Path=/**
